# devbuddy

./: Cargo.toml  Dioxus.toml  README.md  false  flake.nix
.github/workflows/: ci.yml  release.yml
assets/: bulma_v1.0.4.min.css
assets/styling/: main.css
docs/: DONE.md  TODO-ALL.md  TODO.md
docs/ai/2026-05-09_storage-and-notifications/: task.md
scripts/: install-dependencies-linux.sh  install-dependencies-macos.sh  install-dependencies-windows.sh
src/: assets.rs  main.rs  route.rs
src/components/: github_config_form.rs  hero.rs  mod.rs
src/components/item/: github.rs  mod.rs
src/notify/: linux.rs  mod.rs  sdk.rs
src/source/: github.rs  http.rs  mod.rs
src/store/: fs.rs  mod.rs  types.rs
src/views/: blog.rs  home.rs  mod.rs  navbar.rs  settings.rs
