[package]
name = "devbuddy"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop", "ureq", "dioxus-sdk-notification", "notify-rust"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
native = ["dioxus/native", "ureq"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
dioxus = { version = "0.7.9", features = ["router"] }
dioxus-bulma = { git = "https://github.com/theduke/dioxus-bulma", default-features = false }
dioxus-sdk-notification = { version = "0.7.0", optional = true }
notify-rust = { version = "4.17.0", optional = true }
futures = "0.3.32"
http = "1.4.0"
rust-embed = { version = "8.11", features = ["debug-embed"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["time"] }
time = { version = "0.3.44", features = ["serde", "formatting", "parsing"] }

ureq = { version = "3.3", optional = true }

